# proyecto-equipo-team

./: CMakeLists.txt  README.md  Transaction.cpp  Tuple.h  a.out  block.cpp  blockchain.cpp  btc_data_bi_day.csv  forward.h  list.h  main.cpp  node.h  sha256.h
bstree/: bst.h  bst_node.h  iterator.h
hash/: hash.h
heap/: MaxHeap.h  MinHeap.h
heaps/: MaxHeap.h  MinHeap.h
trie/: simpletrie.h  trie.h
